--- a/package.json
+++ b/package.json
@@ -25,25 +25,17 @@
     "lint:fix": "standard --fix --verbose",
     "precommit": "npm run lint"
   },
-  "keywords": [
-    "sao",
-    "scaffolding",
-    "module",
-    "library",
-    "template-lib"
-  ],
+  "keywords": ["sao", "scaffolding", "module", "library", "template-lib"],
   "dependencies": {
     "camelcase": "^4.1.0"
   },
   "devDependencies": {
-    "husky": "^0.13.3",
-    "jest": "^19.0.2",
-    "sao": "^0.19.8",
+    "husky": "^0.14.3",
+    "jest": "^20.0.4",
+    "sao": "^0.20.1",
     "standard": "^10.0.1"
   },
   "standard": {
-    "ignore": [
-      "template"
-    ]
+    "ignore": ["template"]
   }
 }
