--- a/package.json
+++ b/package.json
@@ -25,25 +25,20 @@
     "lint:fix": "standard --fix --verbose",
     "precommit": "npm run lint"
   },
-  "keywords": [
-    "sao",
-    "scaffolding",
-    "module",
-    "library",
-    "template-lib"
-  ],
+  "keywords": ["sao", "scaffolding", "module", "library", "template-lib"],
   "dependencies": {
     "camelcase": "^4.1.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "sao": "^0.20.8",
-    "standard": "^10.0.2"
+    "jest": "^21.0.2",
+    "sao": "^0.22.1",
+    "standard": "^10.0.3"
   },
   "standard": {
-    "ignore": [
-      "template"
-    ]
+    "ignore": ["template"]
+  },
+  "jest": {
+    "modulePathIgnorePatterns": ["template/test", "template/src"]
   }
 }
